--- a/U/7693/皓/kou/Readme
+++ b/U/7693/皓/kou/Readme
@@ -1,2 +1,4 @@
 7 2 3 B    爻 diagrams for divination
 5 2 F E    勾 hook, join, connect; entice
+7 9 5 E    神 spirit, god, supernatural being
+6 6 F 2    曲 crooked, bent; wrong, false
